<resources>
    <string name="app_name">Register Info</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">PassWord</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="gender">gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="register">Register</string>
    <string name="show_info">Show Info</string>
    <string name="hide_info">Hide_info</string>
</resources>